Fixing h1 alignment

--- a/moth_web_v1/static/moth_web_v1/style.css
+++ b/moth_web_v1/static/moth_web_v1/style.css
@@ -19,6 +19,10 @@ html {
 	overflow-y: auto;
 }
 
+h1 {
+  text-align: center;
+}
+
 h1, h2, h3 {
 	color: #AD6F15;
 	font-family: "Maven Pro", Ubuntu, sans-serif;
